[gd_scene load_steps=21 format=3 uid="uid://ckioofsq8ei0b"]

[ext_resource type="Script" path="res://Scripts/menu.gd" id="1_4o7kl"]
[ext_resource type="Texture2D" uid="uid://ck2qr3rqxetsj" path="res://Assets/titulo2.png" id="2_54kdd"]
[ext_resource type="Texture2D" uid="uid://dcngmn7k7p2gl" path="res://Assets/menu_image2.png" id="3_ykkir"]
[ext_resource type="AudioStream" uid="uid://c14weascnxpsh" path="res://Assets/Sonidos/risas.wav" id="4_esk81"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rokjx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_m0u70"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_00qov"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2evvo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rs5sp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xvj3s"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_x1xfo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o1ki0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v6p2m"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1erlj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xi286"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_w4ysm"]

[sub_resource type="Animation" id="Animation_5dmkb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_kiql2"]
resource_name = "fade_to_black"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_7r2md"]
resource_name = "fade_to_normal"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_auau7"]
_data = {
"RESET": SubResource("Animation_5dmkb"),
"fade_to_black": SubResource("Animation_kiql2"),
"fade_to_normal": SubResource("Animation_7r2md")
}

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4o7kl")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 70
theme_override_constants/margin_top = 70
theme_override_constants/margin_right = 70
theme_override_constants/margin_bottom = 70

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 22

[node name="Titulo" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_54kdd")

[node name="Iniciar" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxEmpty_rokjx")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_m0u70")
theme_override_styles/normal = SubResource("StyleBoxEmpty_00qov")
text = "Iniciar"

[node name="Cargar" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxEmpty_2evvo")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_rs5sp")
theme_override_styles/normal = SubResource("StyleBoxEmpty_xvj3s")
text = "Cargar"

[node name="Opciones" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxEmpty_x1xfo")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_o1ki0")
theme_override_styles/normal = SubResource("StyleBoxEmpty_v6p2m")
text = "Opciones"

[node name="Salir" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxEmpty_1erlj")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_xi286")
theme_override_styles/normal = SubResource("StyleBoxEmpty_w4ysm")
text = "Salir"

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/CenterContainer"]
layout_mode = 2
texture = ExtResource("3_ykkir")

[node name="SonidoRisas" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_esk81")
volume_db = 7.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_auau7")
}

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
modulate = Color(0, 0, 0, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Iniciar" to="." method="_on_iniciar_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Cargar" to="." method="_on_cargar_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Opciones" to="." method="_on_opciones_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Salir" to="." method="_on_salir_pressed"]
